revista-styles.css
/* ... */
@media only screen and (min-width: 1024px) {
    .et_fixed_nav .et-fixed-header #main-header {
        box-shadow: 2px 2px 10px rgba(0,0,0,.3);
    }
    .et_fixed_nav .et-fixed-header .logo {
        display: none;
    }
   

}

@media only screen and (min-width: 1025px) {
    .left-right #et-navigation {
        transform: translateY(-15px);
    }
}

@media only screen and (max-width: 1025px) {
    .two-columns_hero .et_pb_blurb_container,
    .issue_hero .et_pb_blurb_container {
        width: 100%;
        border-radius: 0px;
    }
}

@media only screen and (max-width: 880px) {
    .two-columns_hero .et_pb_blurb_container,
    .issue_hero .et_pb_blurb_container {
        position: relative;
    }
}

@media only screen and (max-width: 981px) {
    .side-card-columns.left,
    .article-content-top-columns {
        display: flex;
        flex-direction: column;
    }
    .side-card-columns.left .et_pb_column:nth-child(1),
    .article-content-top-columns-social {
        order: 1;
    }
    .article-content-top-columns-paragraph {
        order: 3;
    }
    .side-card-columns.left .et_pb_column:first-of-type,
    .article-content-top-columns-menu {
        order: 2;
    }

    #et-mobile-navigation nav {
        background: #084272;
    }

    .et_pb_row.et_pb_row_fullwidth,
    .et_pb_specialty_fullwidth>.et_pb_row {
        width: 100%!important;
    }

    .side-card-columns.right .et_pb_text .et_pb_text_inner,
    .side-card-columns.left .et_pb_text .et_pb_text_inner {
        padding: 0px;
    }

   .side-card-columns.left .et_pb_column.et-last-child {
       margin-bottom: 30px;
   }

    .main-section-header h2:after {
        margin: -20px 0 0 0;
    }

    .topics-categories .et_pb_code_inner a {
        width: 48%;
    }
}

@media only screen and (max-width: 750px) {
    .topics-categories .et_pb_code_inner a {
        width: 100%;
    }
    .page .post-wrap h1.entry-title {
        margin-left: 0;
        padding: 10px 8px 10px 0;
        line-height: 1.2em;
    }
    .footer-wrapper {
        display: block;
    }
    .search-results .posts-blog-feed-module.standard .hentry .post-content,
    .archive .posts-blog-feed-module.standard .hentry .post-content {
        width: 100% !important;
    }
    .search-results .posts-blog-feed-module.standard .hentry.type-post.has-post-thumbnail .header,
    .archive .posts-blog-feed-module.standard .hentry.type-post.has-post-thumbnail .header {
        width: 80%;
        margin-bottom: 20px;
        padding: 0;
    }
    .search-results .posts-blog-feed-module .hentry,
    .archive .posts-blog-feed-module .hentry {
        display: block;
    }
    .regular-article-paragraph,
    .paragraph blockquote {
        padding-left: 0;
    }
    .call-to-action {
        padding: 20px;
    }

    .article-breadcrumbs-season-header h2 {
        margin-top: 20px;
    }


    .paragraph-with-image {
        padding: 0 0 0 0%;
    }
    .topics-categories_revised.sections .et_pb_code_inner,
    .topics-categories_revised .et_pb_code_inner {
        display: block;
        max-height: 100%;
    }
    .topics-categories_revised .et_pb_code_inner a {
        width: 100%;
    }
    .past-issues .et_pb_column .et_pb_image {
        margin-left: 0;
    }
}

@media print {
    body {
        background: #fff none !important;
        color: #000;
    }
    #wrapper {
        clear: both !important;
        display: block !important;
        float: none !important;
        position: relative !important;
    }
    #header {
        border-bottom: 2pt solid #000;
        padding-bottom: 18pt;
    }
    #colophon {
        border-top: 2pt solid #000;
    }
    #site-title,
    #site-description {
        float: none;
        line-height: 1.4em;
        margin: 0;
        padding: 0;
    }
    #site-title {
        font-size: 13pt;
    }
    .entry-content {
        font-size: 14pt;
        line-height: 1.6em;
    }
    .entry-title {
        font-size: 21pt;
    }
    a.addthis_button_print,
    #access,
    #branding img,
    #respond,
    .comment-edit-link,
    .edit-link,
    .navigation,
    .page-link,
    .widget-area {
        display: none !important;
    }
    #container,
    #header,
    #footer {
        margin: 0;
        width: 100%;
    }
    #content,
    .one-column #content {
        margin: 24pt 0 0;
        width: 100%;
    }
    .wp-caption p {
        font-size: 11pt;
    }
    #site-info,
    #site-generator {
        float: none;
        width: auto;
    }
    #colophon {
        width: auto;
    }
    img#wpstats {
        display: none;
    }
    #site-generator a {
        margin: 0;
        padding: 0;
    }
    #entry-author-info {
        border: 1px solid #e7e7e7;
    }
    #main {
        display: inline;
    }
    .home .sticky {
        border: none;
    }
    .call-to-action,
    #footer-content-eb,
    #top-header,
    #main-header-wrapper {
        display: none;
    }

    .paragraph-with-image p,
    .paragraph-with-image,
    .regular-article-paragraph,
    .et_pb_row {
        padding: 0;
    }
}

@media only screen and (max-width: 411px) {
    .et_pb_row_0 {
        max-width: 95%;
    }
}

